--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,10 @@
        android:text="Hola Mundo"
        android:theme="@style/RaisedButtonDark"/>
 
+   <ImageButton
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:src="@drawable/descarga"
+       theme />
+
 </LinearLayout>
