--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context="com.example.aula7.menusborderbutton.MainActivity">
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:background="@drawable/border_item"
+       android:padding="30dp">
+       android:layout_marginBotton="30dp"
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Hola mundo"/>
+   </LinearLayout>
+
+   <View
+       android:layout_width="match_parent"
+       android:layout_height="5dp"
+       android:background="@color/colorPrimaryDark"
+
 
    <!--
    <Button
@@ -29,7 +49,7 @@
        android:theme="@style/RaisedButtonDark"
        android:drawablePadding="5dp"/>
 -->
-
+<!--
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -37,5 +57,5 @@
        android:src="@drawable/iconoo"
        android:layout_margin="16dp"/>
 
-
-</android.support.design.widget.CoordinatorLayout>
+-->
+</LinearLayout>
